force-app/main/default/objects/Condition__c/fields/Condition_Satisfaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Condition_Satisfaction_Date__c</fullName>
    <label>Condition Satisfaction Date</label>
    <type>DateTime</type>
</CustomField>