force-app/main/default/objects/Condition__c/fields/Email_Reject_Note_To_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Email_Reject_Note_To_Borrower__c</fullName>
    <inlineHelpText>By selecting Yes you will send an email to the Borrower.</inlineHelpText>
    <label>Email Reject Note To Borrower?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>