force-app/main/default/objects/Condition__c/fields/Encompass_Id__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Id__c</fullName>
    <externalId>true</externalId>
    <label>Encompass Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>