force-app/main/default/objects/Condition__c/fields/FileUploadCount__c.field-meta.xml
<CustomField>
    <fullName>FileUploadCount__c</fullName>
    <label>File Upload Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>