force-app/main/default/objects/Condition__c/fields/IncludeInEmail__c.field-meta.xml
<CustomField>
    <fullName>IncludeInEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Email</label>
    <type>Checkbox</type>
</CustomField>