force-app/main/default/objects/Condition__c/fields/Is_Condition_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Condition_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Condition Uploaded</label>
    <type>Checkbox</type>
</CustomField>