force-app/main/default/objects/Condition__c/fields/Lead_Document_Request_Reference__c.field-meta.xml
<CustomField>
    <fullName>Lead_Document_Request_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Document Request Reference</label>
    <referenceTo>Lead_Document_Request_Reference__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>