force-app/main/default/objects/Condition__c/fields/RejectionNotes__c.field-meta.xml
<CustomField>
    <fullName>RejectionNotes__c</fullName>
    <label>Rejection Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>