force-app/main/default/objects/Condition__c/fields/RemoveDocumentsFromCondition__c.field-meta.xml
<CustomField>
    <fullName>RemoveDocumentsFromCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking this box, you will keep the documents in your folders, but they will no longer be associated to this specific condition.</inlineHelpText>
    <label>Remove Documents From Condition</label>
    <type>Checkbox</type>
</CustomField>