force-app/main/default/objects/Condition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
                <isActive>false</isActive>
                <label>Waiting on someone else</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>