force-app/main/default/objects/Condition__c/fields/Transaction_Condition_Reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Condition_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Condition Reference</label>
    <referenceTo>Transaction_Condition_Reference__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>