force-app/main/default/objects/Condition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jr. Processor</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Loan Coordinator</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Post Closing</fullName>
            </value>
            <value>
                <fullName>Generic Document Portal Upload</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
                <isActive>false</isActive>
                <label>LC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>