force-app/main/default/objects/Condition__c/fields/UW_Notes__c.field-meta.xml
<CustomField>
    <fullName>UW_Notes__c</fullName>
    <label>UW Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>