force-app/main/default/objects/Condition__c/fields/UWM_Condition_Id__c.field-meta.xml
<CustomField>
    <fullName>UWM_Condition_Id__c</fullName>
    <externalId>true</externalId>
    <label>UWM Condition Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>